[gd_scene load_steps=27 format=3 uid="uid://b2vj1tgxdcsin"]

[ext_resource type="Script" uid="uid://b6kttihtsshdo" path="res://npcs/alien/enemy.gd" id="1_7k4kp"]
[ext_resource type="PackedScene" uid="uid://dc0ycck3etk38" path="res://weapons/uniform_health.tscn" id="2_8llsw"]
[ext_resource type="Texture2D" uid="uid://c8xdfxeljipf8" path="res://npcs/alien/alien_char_sheet/alien_spritesheet.png" id="2_klwlt"]
[ext_resource type="PackedScene" uid="uid://cce7pakh1pe5y" path="res://weapons/collision_damage.tscn" id="2_kv57w"]
[ext_resource type="Script" uid="uid://dje7ulousmgr3" path="res://graphics/animated_billboard.gd" id="3_n3nxh"]
[ext_resource type="Script" uid="uid://dsmnh0m8qybhj" path="res://weapons/damage_resources/normal_damage.gd" id="3_qlx0e"]

[sub_resource type="Resource" id="Resource_tjnlw"]
script = ExtResource("3_qlx0e")
normal_damage = 10.0
metadata/_custom_type_script = "uid://dsmnh0m8qybhj"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v0wm2"]
radius = 0.690391
height = 2.34891

[sub_resource type="AtlasTexture" id="AtlasTexture_3tiwd"]
atlas = ExtResource("2_klwlt")
region = Rect2(272, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_8llsw"]
atlas = ExtResource("2_klwlt")
region = Rect2(816, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5n2w"]
atlas = ExtResource("2_klwlt")
region = Rect2(884, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv57w"]
atlas = ExtResource("2_klwlt")
region = Rect2(952, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlx0e"]
atlas = ExtResource("2_klwlt")
region = Rect2(1020, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_erfdu"]
atlas = ExtResource("2_klwlt")
region = Rect2(136, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6n8l"]
atlas = ExtResource("2_klwlt")
region = Rect2(0, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_vegwk"]
atlas = ExtResource("2_klwlt")
region = Rect2(204, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_y32fr"]
atlas = ExtResource("2_klwlt")
region = Rect2(68, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngn6k"]
atlas = ExtResource("2_klwlt")
region = Rect2(612, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1abx"]
atlas = ExtResource("2_klwlt")
region = Rect2(680, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2666"]
atlas = ExtResource("2_klwlt")
region = Rect2(748, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u6oq"]
atlas = ExtResource("2_klwlt")
region = Rect2(340, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbvtc"]
atlas = ExtResource("2_klwlt")
region = Rect2(408, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_t41s2"]
atlas = ExtResource("2_klwlt")
region = Rect2(476, 0, 68, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjbkc"]
atlas = ExtResource("2_klwlt")
region = Rect2(544, 0, 68, 87)

[sub_resource type="SpriteFrames" id="SpriteFrames_myj7t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tiwd")
}],
"loop": true,
"name": &"damaged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8llsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5n2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv57w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlx0e")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erfdu")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6n8l")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vegwk")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y32fr")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngn6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1abx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1abx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2666")
}],
"loop": true,
"name": &"shoot_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u6oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbvtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t41s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjbkc")
}],
"loop": true,
"name": &"walk_front",
"speed": 5.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_4rmfa"]
custom_solver_bias = 0.041
radius = 19.526

[node name="Enemy" type="RigidBody3D" groups=["Damageable", "enemies_targetable_by_boomguy"]]
collision_layer = 4
collision_mask = 711
can_sleep = false
lock_rotation = true
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_7k4kp")
follow_strength = 5
shoot_range = 20.0
melee_range = 0.0
shoot_delay = 0.6

[node name="CollisionDamage" parent="." instance=ExtResource("2_kv57w")]
damage = SubResource("Resource_tjnlw")

[node name="UniformHealth" parent="." instance=ExtResource("2_8llsw")]
max_armor = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0967723, 1.17078, 0)
shape = SubResource("CapsuleShape3D_v0wm2")

[node name="Sprite3D" type="AnimatedSprite3D" parent="." node_paths=PackedStringArray("designated_parent")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0858622, 1.28948, 0)
top_level = true
pixel_size = 0.0313
alpha_cut = 1
alpha_hash_scale = 0.5
texture_filter = 2
sprite_frames = SubResource("SpriteFrames_myj7t")
animation = &"shoot_front"
script = ExtResource("3_n3nxh")
designated_parent = NodePath("..")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -14.0463)
shape = SubResource("SphereShape3D_4rmfa")

[node name="SpotLight3D" type="SpotLight3D" parent="Area3D"]
transform = Transform3D(-0.999999, 0.000553374, 0.00112828, 1.14177e-10, -0.897828, 0.440346, 0.00125668, 0.440346, 0.897827, 0, 1.97005, 0.0749006)
visible = false
spot_range = 6.76936
spot_angle = 46.8611

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_Area3D_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_Area3D_body_exited"]
